[KOGITO-1248] Add process generation tests and some fixes
Signed-off-by: ruromero <rromerom@redhat.com>